<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ch.usi.tender.ui.home.HomeFragment"
        android:label="@string/tender"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ch.usi.tender.ui.bookmarks.BookMarksFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ch.usi.tender.ui.recently_visited.RecentlyVisitedFragment"
        android:label="@string/recently_visited"
        tools:layout="@layout/fragment_recently_visited" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ch.usi.tender.ui.me.MeFragment"
        android:label="@string/me"
        tools:layout="@layout/fragment_me" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ch.usi.tender.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ch.usi.tender.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>